Add missing script

--- a/index.html
+++ b/index.html
@@ -2,6 +2,7 @@
   <head>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/p5.js/0.7.2/p5.js"></script>
     <script src="./src/constants.js"></script>
+    <script src="./src/maze/cell.js"></script>
     <script src="./src/sketch.js"></script>
   </head>
   <body>
