--- a/index.html
+++ b/index.html
@@ -3,6 +3,7 @@
     <script src="https://cdnjs.cloudflare.com/ajax/libs/p5.js/0.7.2/p5.js"></script>
     <script src="./src/constants.js"></script>
     <script src="./src/maze/cell.js"></script>
+    <script src="./src/maze/maze.js"></script>
     <script src="./src/sketch.js"></script>
   </head>
   <body>
