Fix missing CSS

--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
     <script src="./src/maze/cell.js"></script>
     <script src="./src/maze/maze.js"></script>
     <script src="./src/sketch.js"></script>
+    <link rel="stylesheet" href="./style.css">
   </head>
   <body>
     <div id="sketch"></div>
