Create graph generation algorithm

--- a/index.html
+++ b/index.html
@@ -4,6 +4,8 @@
     <script src="./src/constants.js"></script>
     <script src="./src/maze/cell.js"></script>
     <script src="./src/maze/maze.js"></script>
+    <script src="./src/graph/vertex.js"></script>
+    <script src="./src/graph/graph.js"></script>
     <script src="./src/sketch.js"></script>
     <link rel="stylesheet" href="./style.css">
   </head>
