Implement Dijkstra's algorithm - no animation

--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
     <script src="./src/maze/maze.js"></script>
     <script src="./src/graph/vertex.js"></script>
     <script src="./src/graph/graph.js"></script>
+    <script src="./src/solver/dijkstra.js"></script>
     <script src="./src/sketch.js"></script>
     <link rel="stylesheet" href="./style.css">
   </head>
