--- a/index.html
+++ b/index.html
@@ -1,6 +1,7 @@
 <html>
   <head>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/p5.js/0.7.2/p5.js"></script>
+    <script src="http://davidbau.com/encode/seedrandom.js"></script>
     <script src="./src/constants.js"></script>
     <script src="./src/maze/cell.js"></script>
     <script src="./src/maze/maze.js"></script>
@@ -8,6 +9,7 @@
     <script src="./src/graph/graph.js"></script>
     <script src="./src/solver/solver.js"></script>
     <script src="./src/solver/dijkstra.js"></script>
+    <script src="./src/solver/astar.js"></script>
     <script src="./src/sketch.js"></script>
     <link rel="stylesheet" href="./style.css">
   </head>
